--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		rel="stylesheet" />
 
 	<link rel="stylesheet" href="./src/css/reset.css" />
-	<link rel="stylesheet" href="./src/css/estilos.css" />
+	<link rel="stylesheet" href="./src/css/style.css" />
 	<link rel="stylesheet" href="./src/css/responsivo.css">
 </head>
 
